// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Modal
  onRequestClose={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.2)",
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
  visible={true}
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,0.1)",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "left": -15,
          "position": "absolute",
          "top": 15,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "borderBottomColor": "transparent",
            "borderBottomWidth": 10,
            "borderLeftColor": "#404048",
            "borderLeftWidth": 10,
            "borderRightColor": "transparent",
            "borderRightWidth": 0,
            "borderStyle": "solid",
            "borderTopColor": "transparent",
            "borderTopWidth": 10,
            "height": 0,
            "width": 0,
          }
        }
      />
    </View>
    <TouchableOpacity
      activeOpacity={1}
      focusedOpacity={0.7}
      onPress={[Function]}
      style={
        Object {
          "backgroundColor": "#404048",
          "height": 533.6,
          "left": -122.5,
          "position": "absolute",
          "top": -50,
          "width": 112.5,
        }
      }
    >
      <NumericKeyboard
        cleanInput={[Function]}
        input="1"
        numOnPress={[Function]}
        size={6}
        smallBlock={true}
      />
      <RowNB
        size={1}
      >
        <TouchableOpacity
          activeOpacity={0.2}
          disabled={false}
          focusedOpacity={0.7}
          onPress={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#404048",
                "justifyContent": "center",
                "width": "34%",
              },
              Object {
                "backgroundColor": "#2eab61",
                "width": "100%",
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#fff",
                  "fontFamily": "Gotham-Book",
                  "fontSize": 14,
                },
                Object {
                  "fontSize": 9,
                },
              ]
            }
          >
            OK
          </Text>
        </TouchableOpacity>
      </RowNB>
    </TouchableOpacity>
  </TouchableOpacity>
</Modal>
`;

exports[`renders correctly with left arrow 1`] = `
<Modal
  onRequestClose={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.2)",
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
  visible={true}
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,0.1)",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "left": 0,
          "position": "absolute",
          "top": 15,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "transparent",
              "borderBottomWidth": 10,
              "borderLeftColor": "#404048",
              "borderLeftWidth": 10,
              "borderRightColor": "transparent",
              "borderRightWidth": 0,
              "borderStyle": "solid",
              "borderTopColor": "transparent",
              "borderTopWidth": 10,
              "height": 0,
              "width": 0,
            },
            Object {
              "borderLeftColor": "transparent",
              "borderLeftWidth": 0,
              "borderRightColor": "#404048",
              "borderRightWidth": 10,
            },
          ]
        }
      />
    </View>
    <TouchableOpacity
      activeOpacity={1}
      focusedOpacity={0.7}
      onPress={[Function]}
      style={
        Object {
          "backgroundColor": "#404048",
          "height": 533.6,
          "left": 10,
          "position": "absolute",
          "top": -50,
          "width": 112.5,
        }
      }
    >
      <NumericKeyboard
        cleanInput={[Function]}
        input="1"
        numOnPress={[Function]}
        size={6}
        smallBlock={true}
      />
      <RowNB
        size={1}
      >
        <TouchableOpacity
          activeOpacity={0.2}
          disabled={false}
          focusedOpacity={0.7}
          onPress={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#404048",
                "justifyContent": "center",
                "width": "34%",
              },
              Object {
                "backgroundColor": "#2eab61",
                "width": "100%",
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#fff",
                  "fontFamily": "Gotham-Book",
                  "fontSize": 14,
                },
                Object {
                  "fontSize": 9,
                },
              ]
            }
          >
            OK
          </Text>
        </TouchableOpacity>
      </RowNB>
    </TouchableOpacity>
  </TouchableOpacity>
</Modal>
`;

exports[`renders correctly with right arrow 1`] = `
<Modal
  onRequestClose={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.2)",
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
  visible={true}
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,0.1)",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "left": -15,
          "position": "absolute",
          "top": 15,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "borderBottomColor": "transparent",
            "borderBottomWidth": 10,
            "borderLeftColor": "#404048",
            "borderLeftWidth": 10,
            "borderRightColor": "transparent",
            "borderRightWidth": 0,
            "borderStyle": "solid",
            "borderTopColor": "transparent",
            "borderTopWidth": 10,
            "height": 0,
            "width": 0,
          }
        }
      />
    </View>
    <TouchableOpacity
      activeOpacity={1}
      focusedOpacity={0.7}
      onPress={[Function]}
      style={
        Object {
          "backgroundColor": "#404048",
          "height": 533.6,
          "left": -122.5,
          "position": "absolute",
          "top": -50,
          "width": 112.5,
        }
      }
    >
      <NumericKeyboard
        cleanInput={[Function]}
        input="1"
        numOnPress={[Function]}
        size={6}
        smallBlock={true}
      />
      <RowNB
        size={1}
      >
        <TouchableOpacity
          activeOpacity={0.2}
          disabled={false}
          focusedOpacity={0.7}
          onPress={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#404048",
                "justifyContent": "center",
                "width": "34%",
              },
              Object {
                "backgroundColor": "#2eab61",
                "width": "100%",
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#fff",
                  "fontFamily": "Gotham-Book",
                  "fontSize": 14,
                },
                Object {
                  "fontSize": 9,
                },
              ]
            }
          >
            OK
          </Text>
        </TouchableOpacity>
      </RowNB>
    </TouchableOpacity>
  </TouchableOpacity>
</Modal>
`;
